added missing result

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -919,11 +919,11 @@
                     <td class="winning" id="lbw">25</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">6</td>
+                    <td class="machine">65</td>
+                    <td class="machine">16</td>
+                    <td class="machine">15</td>
+                    <td class="machine" id="lbm">41</td>
                 </tr>
             </tbody> 
 
