--- a/GAMES/5Inter.html
+++ b/GAMES/5Inter.html
@@ -1755,11 +1755,11 @@
                     <td class="winning" id="lbw">11</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">60</td>
+                    <td class="machine">87</td>
+                    <td class="machine">66</td>
+                    <td class="machine">17</td>
+                    <td class="machine" id="lbm">42</td>
                 </tr>
             </tbody>
 
