--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -223,7 +223,7 @@
             <article>
                 <h3 class="game">LUCKY-G</h3>
                 <p class="winning">30 - 75 - 66 - 55 - 25</p>
-                <p class="machine"></p>        
+                <p class="machine">6 - 65 - 16 - 15 - 41</p>        
             </article>
             <article>
                 <h3 class="game">Super</h3>
