--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -896,11 +896,11 @@
                     <td class="winning" id="lbw">24</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">75</td>
+                    <td class="machine">63</td>
+                    <td class="machine">90</td>
+                    <td class="machine">27</td>
+                    <td class="machine" id="lbm">48</td>
                 </tr>
             </tbody> 
 
