result JUNE 27/Thursday/2024

--- a/GAMES/15Lucky.html
+++ b/GAMES/15Lucky.html
@@ -1774,11 +1774,11 @@
                     <td class="winning" id="lbw">80</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">17</td>
+                    <td class="machine">66</td>
+                    <td class="machine">48</td>
+                    <td class="machine">46</td>
+                    <td class="machine" id="lbm">58</td>
                 </tr>
             </tbody> 
 
