--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">60 - 36 - 77 - 57 - 26</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">50 - 63 - 62 - 1 - 19</p>
+                <p class="machine">66 - 54 - 86 - 3 - 46</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Aseda</h3>
+                <p class="winning">1 - 66 - 10 - 57 - 64</p>
+                <p class="machine">83 - 18 - 17 - 32 - 67</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">76 - 60 - 62 - 84 - 17</p>
+                <p class="machine">4 - 16 - 79 - 37 - 63</p>        
             </article>
         </section>
     </div>
