result JULY 1/Monday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">5 - 76 - 73 - 41 - 75</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">12 - 89 - 33 - 68 - 44</p>
+                <p class="machine">80 - 71 - 10 - 4 - 19</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">MSP</h3>
+                <p class="winning">25 - 81 - 75 - 32 - 2</p>
+                <p class="machine">37 - 90 - 53 - 35 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">37 - 29 - 89 - 72 - 9</p>
+                <p class="machine">73 - 46 - 48 - 74 - 45</p>        
             </article>
         </section>
     </div>
