result JULY 2/Tuesday/2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,14 +250,19 @@
                 <p class="machine">14 - 51 - 44 - 39 - 3</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">20 - 85 - 66 - 31 - 52</p>
+                <p class="machine">68 - 19 - 23 - 65 - 25</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">69 - 75 - 86 - 32 - 31</p>
+                <p class="machine">59 - 39 - 65 - 19 - 7</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">87 - 64 - 15 - 37 - 32</p>
+                <p class="machine">18 - 20 - 28 - 3 - 29</p>        
             </article>
         </section>
     </div>
