--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">85 - 30 - 35 - 2 - 31</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">10 - 76 - 30 - 69 - 22</p>
+                <p class="machine">88 - 57 - 39 - 5 - 29</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">52 - 10 - 82 - 24 - 4</p>
+                <p class="machine">74 - 3 - 5 - 64 - 68</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">83 - 66 - 78 - 39 - 7</p>
+                <p class="machine">74 - 22 - 30 - 1 - 62</p>        
             </article>
         </section>
     </div>
