--- a/classification.html
+++ b/classification.html
@@ -12,9 +12,9 @@
         
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Baba Ijebu (premier lotto) classification chart">
+    <meta name="description" content="Baba Ijebu lotto classification chart">
     <meta name="keywords" content="Baba Ijebu classification chart, Premier lotto classification chart, counterpart">
-    <title>Visual Lotto Board | Classification Chart</title>
+    <title>Lotto Classification Chart | Visual Lotto Board</title>
 
     <meta property="og:title" content="Classification Chart">
     <meta property="og:description" content="Lotto classification chart">
