refactor new pattern

--- a/classification.html
+++ b/classification.html
@@ -167,8 +167,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/">
-                        <img src="https://i.postimg.cc/hjxfCg67/VLB-logo-removebg-preview.png" alt="home">
+                    <a href="/" aria-label="home">
+                        <img src="https://i.postimg.cc/hjxfCg67/VLB-logo-removebg-preview.png" alt="">
                     </a>
                 </li>
             </ul>
