result JULY 05/Friday/2024

--- a/new-winning-pattern.html
+++ b/new-winning-pattern.html
@@ -295,7 +295,7 @@
 
             <p>From now on, when we predict a number and it doesn’t drop, <em>repeat the same number for the next game (up to a maximum of 12 times)</em>. You’ll increase your chances of winning.</p>
 
-            <small><b>Note:</b> You don’t necessarily need to repeat it 12 times; even once or twice can lead to a win.</small>
+            <small><b>Note:</b> You don’t necessarily need to repeat it 12 times; even once or twice can lead to a win, and then you end it there till will drop prediction for another game.</small>
 
             <p>
                 Always stay updated by following our 
