result JULY 7 Sunday, 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">24 - 32 - 85 - 79 - 16</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">lucly</h3>
+                <p class="winning">34 - 13 - 3 - 71 - 21</p>
+                <p class="machine">12 - 75 - 48 - 31 - 8</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Aseda</h3>
+                <p class="winning">52 - 27 - 42 - 60 - 53</p>
+                <p class="machine">4 - 15 - 1 - 89 - 28</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">44 - 84 - 57 - 24 - 74</p>
+                <p class="machine">89 - 64 - 19 - 30 - 43</p>        
             </article>
         </section>
     </div>
