result JULY 18 Thursday, 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">72 - 78 - 83 - 70 - 44</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">47 -79 - 64 - 4 - 89</p>
+                <p class="machine">52 - 50 - 21 - 81 - 74</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fortune</h3>
+                <p class="winning">30 - 82 - 32 - 5 - 59</p>
+                <p class="machine">41 - 34 - 44 - 86 - 23</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">29 - 44 - 60 - 27 - 2</p>
+                <p class="machine">37 - 43 - 63 - 89 - 14</p>        
             </article>
         </section>
     </div>
