result JULY 22 Monday, 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -250,19 +250,19 @@
                 <p class="machine">51 - 74 - 52 - 22 - 33</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Metro</h3>
+                <p class="winning">47 - 7 - 88 - 15 - 65</p>
+                <p class="machine">40 - 9 - 64 - 35 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">MSP</h3>
+                <p class="winning">87 - 78 - 51 - 3 - 64</p>
+                <p class="machine">48 - 66 - 84 - 35 - 70</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">72 - 46 - 15 - 80 - 88</p>
+                <p class="machine">4 - 89 - 61 - 79 - 25</p>        
             </article>
         </section>
     </div>
