result JULY 23 Tuesday, 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -273,19 +273,19 @@
                 <p class="machine">45 - 32 - 85 - 43 - 50</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">55 - 63 - 85 - 25 - 62</p>
+                <p class="machine">40 - 15 - 39 - 37 - 47</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">6 - 38 - 14 - 35 - 68</p>
+                <p class="machine">16 - 34 - 51 - 85 - 71</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">69 - 44 - 48 - 21 - 32</p>
+                <p class="machine">57 - 42 - 3 - 29 - 38</p>        
             </article>
         </section>
     </div>
