--- a/GAMES/6Gold.html
+++ b/GAMES/6Gold.html
@@ -1922,7 +1922,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">59</td>
-                    <td class="days"><small>July 23th tues</small></td>
+                    <td class="days"><small>July 23rd tues</small></td>
                 
                     <!-- winning-->
                     <td class="winning">5</td>
