--- a/GAMES/8Jackpot.html
+++ b/GAMES/8Jackpot.html
@@ -1923,7 +1923,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">59</td>
-                    <td class="days"><small>July 23th tues</small></td>
+                    <td class="days"><small>July 23rd tues</small></td>
                 
                     <!-- winning-->
                     <td class="winning">77</td>
