--- a/classification.html
+++ b/classification.html
@@ -22,6 +22,9 @@
     <meta property="og:image:alt" content="Numbers from 1 to 90 relating to each other">
     <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/classification">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
 
     <style>
 
@@ -107,6 +110,25 @@
             padding: 5px;
             text-align: center;
             font-weight:400;
+        }
+
+        footer {
+            display: block;
+            color: #fff;
+            width: 100%;
+            text-align: center;
+            margin: 2rem 0 0.3rem;
+            background-color: #000;
+            border: 1px solid #add8eb31;
+            font-size: 30px;
+        }
+        footer a {
+            color: #fff;
+            margin: 0.5em;
+        }
+        footer a:hover {
+            color: #add8eb;
+            transition: 0.4s;
         }
 
        
@@ -1483,6 +1505,17 @@
             </iframe>
         </div> -->
     </div>
+    <footer>
+        <div class="stayConnected">
+            <p>Connect with us</p>
+            <div class="icon-wrapper">
+                <a href="https://twitter.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
+                <a href="https://www.facebook.com/visuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
+                <a href="https://m.me/109930914660224" target="_blank" class="icon"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
+                <a href="http://www.youtube.com/@VisuaLottoBoard" target="_blank" class="icon"><i class="fa-brands fa-youtube"  aria-label="connect on our YouTube channel, watch live demo of how to navigate our platform"></i></a>
+            </div> 
+        </div>
+    </footer>
     <!-- <button id="close">Close</button>
     </dialog>
     <button id="show">Show classification</button>
