--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -292,19 +292,19 @@
                 <p class="machine">68 - 4 - 21 - 38 - 20</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">06</h3>
+                <p class="winning">67 - 49 - 54 - 16 - 13</p>
+                <p class="machine">76 - 89 - 75 - 20 - 17</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">National</h3>
+                <p class="winning">33 - 77 - 49 - 71 - 30</p>
+                <p class="machine">66 - 67 - 19 - 34 - 52</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">89 - 37 - 31 - 54 - 4</p>
+                <p class="machine">73 - 79 - 44 - 28 - 7</p>        
             </article>
         </section>
     </div>
