result 3rd & 4th August

--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1012,7 +1012,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">31</td>
-                    <td class="days"><small>Aug 1st</small></td>
+                    <td class="days"><small>Aug 2nd</small></td>
                 
                     <!-- winning-->
                     <td class="winning">72</td>
