--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
             </aside>
         </div>
+
+        <p style="margin: 2rem; text-align: center; color: #fff; background-color: #ff0000; padding: 10px 0; font-weight: bold;">Monday Special (MSP) draw of 5th August has been postponed and will now be drawn on Tuesday 6th, 2024</p>
         
                 <!-- main -->
         <main>
