complete all  results

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1021,11 +1021,11 @@
                     <td class="winning" id="lbw">26</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">2</td>
+                    <td class="machine">25</td>
+                    <td class="machine">80</td>
+                    <td class="machine" id="lbm">8</td>
                 </tr>
             </tbody>
 
