result August 7 Wednesday 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -297,19 +297,19 @@
                 <p class="machine">30 - 88 - 49 - 22 - 61</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">25 - 38 - 47 - 68 - 78</p>
+                <p class="machine">88 - 7 - 42 - 15 - 81</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">24 - 74 - 61 - 10 - 50</p>
+                <p class="machine">29 - 57 - 44 - 20 - 58</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">75 - 87 - 22 - 32 - 18</p>
+                <p class="machine">34 - 84 - 36 - 14 - 27</p>        
             </article>
         </section>
     </div>
