result AUGUST 17th Saturday, 2024

--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1066,11 +1066,11 @@
                     <td class="winning" id="lbw">39</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">2</td>
+                    <td class="machine">9</td>
+                    <td class="machine">40</td>
+                    <td class="machine">73</td>
+                    <td class="machine" id="lbm">81</td>
                 </tr>
             </tbody>
 
