--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -293,19 +293,19 @@
                 <p class="machine">63 - 27 - 61 - 43 - 11</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">06</h3>
+                <p class="winning">42 - 45 - 81 - 59 - 44</p>        
+                <p class="machine">64 - 35 - 43 - 14 - 55</p>
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">National</h3>
+                <p class="winning">51 - 7 - 30 - 63 - 82</p>
+                <p class="machine">48 - 8 - 61 - 88 - 57</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">72 - 37 - 63 - 3 - 4</p>
+                <p class="machine">44 - 53 - 51 - 43 - 17</p>        
             </article>
         </section>
     </div>
