--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1088,11 +1088,11 @@
                     <td class="winning" id="lbw">22</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">60</td>
+                    <td class="machine">80</td>
+                    <td class="machine">88</td>
+                    <td class="machine">20</td>
+                    <td class="machine" id="lbm">55</td>
                 </tr>
             </tbody>
 
