result AUGUST 26th Monday, 20204

--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1106,11 +1106,11 @@
                     <td class="winning" id="lbw">90</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">65</td>
+                    <td class="machine">55</td>
+                    <td class="machine">47</td>
+                    <td class="machine">1</td>
+                    <td class="machine" id="lbm">40</td>
                 </tr>
             </tbody>
 
