added betway tools

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -308,6 +308,11 @@
             </article>
         </section>
     </div>
+
+                    <!-- betway-->
+    <div style="text-align: center; margin: 2rem 0;">
+        <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a>
+    </div>
     
     <div class="gameList">
         <table>
