--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                 <div class="navigation">
                     <a class="anchor dailyResult" href="./GAMES/dailyResult.html"  id="dailyResult"></i>Check Day Result</a>
                     <a class="anchor plan-and-event" href="/plan.html" id="planAndEvent">PLAN & EVENTS</a>
-                    <a class=" anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>
-                         
+                    <a class="anchor counterpart" href="/classification.html" target="_blank" id="counterpart">Classification Chart</a>                 
                     <!-- <button class="buy-lrCard">Buy LR Card</button> -->
                 </div> 
             </nav>
@@ -106,7 +105,12 @@
                 <a class="google-review-link" href="https://g.page/r/CcKUCr5g5b_JEBI/review" target="_blank" style="color: #ff0000b5; font-size: 22px;" >Click here to Review  <i class="fa-solid fa-star-half-stroke"></i></a>
             </aside>
         </div>
-        
+
+        <div style="text-align: center;">
+            <a href="https://www.betway.com.ng/lobby/casino/?btag=P105967-PR37554-CM105651-TS2032251&"; target="_blank" rel="nofollow"><img src="https://secure.betwaypartnersafrica.com/imagehandler/3721e926-4f21-4638-8eb8-19b1766229f7/" border="0"  alt="" /></a>
+        </div>
+
+
                 <!-- main -->
         <main>
             <div class="btn-container">
