--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1128,14 +1128,14 @@
             <tbody>
                 <tr>
                     <td class="serial-num">36</td>
-                    <td class="days"><small></small></td>
+                    <td class="days"><small>Sept 4th</small></td>
                 
                     <!-- winning-->
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning"></td>
-                    <td class="winning" id="lbw"></td>
+                    <td class="winning">11</td>
+                    <td class="winning">46</td>
+                    <td class="winning">36</td>
+                    <td class="winning">83</td>
+                    <td class="winning" id="lbw">52</td>
     
                     <!-- machine-->
                     <td class="machine" id="fbm"></td>
