SEPTEMBER 5th Thursday, 2024

--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -265,7 +265,7 @@
             <article>
                 <h3 class="game">Midweek</h3>
                 <p class="winning">11 - 46 - 36 - 83 - 52</p>
-                <p class="machine"></p>        
+                <p class="machine">49 - 81 - 34 - 67 - 72</p>        
             </article>
             <article>
                 <h3 class="game">lucky</h3>
@@ -292,19 +292,19 @@
                 <p class="machine">40 - 65 - 89 - 45 - 62</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">International</h3>
+                <p class="winning">73 - 10 - 21 - 46 - 54</p>
+                <p class="machine">78 - 72 - 50 - 29 - 36</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fortune</h3>
+                <p class="winning">17 - 47 - 88 - 69 - 34</p>
+                <p class="machine">39 - 73 - 46 - 89 - 70</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Bingo</h3>
+                <p class="winning">57 - 46 - 15 - 70 - 26</p>
+                <p class="machine">34 - 16 - 64 - 73 - 88</p>        
             </article>
         </section>
     </div>
