result SEPTEMBER 10th Tuesday, 2024

--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1160,11 +1160,11 @@
                     <td class="winning" id="lbw">43</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">90</td>
+                    <td class="machine">40</td>
+                    <td class="machine">56</td>
+                    <td class="machine">53</td>
+                    <td class="machine" id="lbm">47</td>
                 </tr>
             </tbody>
 
