--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1131,11 +1131,11 @@
                     <td class="winning" id="lbw">12</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">47</td>
+                    <td class="machine">32</td>
+                    <td class="machine">38</td>
+                    <td class="machine">2</td>
+                    <td class="machine" id="lbm">18</td>
                 </tr>
             </tbody>
 
