--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1150,11 +1150,11 @@
                     <td class="winning" id="lbw">73</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">42</td>
+                    <td class="machine">67</td>
+                    <td class="machine">20</td>
+                    <td class="machine">44</td>
+                    <td class="machine" id="lbm">80</td>
                 </tr>
             </tbody>
 
