--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -292,19 +292,19 @@
                 <p class="machine">86 - 23 - 53 - 44 - 81</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">78 - 43 - 83 - 56 - 46</p>
+                <p class="machine">28 - 40 - 53 - 79 - 29</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">13 - 29 - 81 - 44 - 8</p>
+                <p class="machine">55 - 25 - 35 - 2 - 22</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">lucky</h3>
+                <p class="winning">73 - 23 - 14 - 63 - 17</p>
+                <p class="machine">82 - 55 - 49 - 18 - 15</p>        
             </article>
         </section>
     </div>
