--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1153,11 +1153,11 @@
                     <td class="winning" id="lbw">6</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">23</td>
+                    <td class="machine">33</td>
+                    <td class="machine">85</td>
+                    <td class="machine">54</td>
+                    <td class="machine" id="lbm">37</td>
                 </tr>
             </tbody>
 
