--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1162,7 +1162,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">37</td>
-                    <td class="days"><small>Sept 14th</small></td>
+                    <td class="days"><small>Sept 15th</small></td>
                 
                     <!-- winning-->
                     <td class="winning">75</td>
@@ -1172,11 +1172,11 @@
                     <td class="winning" id="lbw">31</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">74</td>
+                    <td class="machine">10</td>
+                    <td class="machine">77</td>
+                    <td class="machine">89</td>
+                    <td class="machine" id="lbm">36</td>
                 </tr>
             </tbody>
 
