--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1175,11 +1175,11 @@
                     <td class="winning" id="lbw">48</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">52</td>
+                    <td class="machine">15</td>
+                    <td class="machine">57</td>
+                    <td class="machine">37</td>
+                    <td class="machine" id="lbm">88</td>
                 </tr>
             </tbody>
 
