--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1194,11 +1194,11 @@
                     <td class="winning" id="lbw">43</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">49</td>
+                    <td class="machine">3</td>
+                    <td class="machine">46</td>
+                    <td class="machine" id="lbm">11</td>
                 </tr>
             </tbody>
             
