--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1176,11 +1176,11 @@
                     <td class="winning" id="lbw">37</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">80</td>
+                    <td class="machine">25</td>
+                    <td class="machine">88</td>
+                    <td class="machine">33</td>
+                    <td class="machine" id="lbm">13</td>
                 </tr>
             </tbody>
 
