--- a/GAMES/18MSP.html
+++ b/GAMES/18MSP.html
@@ -1225,11 +1225,11 @@
                     <td class="winning" id="lbw">49</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">59</td>
+                    <td class="machine">4</td>
+                    <td class="machine">33</td>
+                    <td class="machine">63</td>
+                    <td class="machine" id="lbm">13</td>
                 </tr>
             </tbody>
 
