--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1227,11 +1227,11 @@
                     <td class="winning" id="lbw">49</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">73</td>
+                    <td class="machine">50</td>
+                    <td class="machine">87</td>
+                    <td class="machine">8</td>
+                    <td class="machine" id="lbm">88</td>
                 </tr>
             </tbody>
 
