--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1226,11 +1226,11 @@
                     <td class="winning" id="lbw">76</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">28</td>
+                    <td class="machine">14</td>
+                    <td class="machine">63</td>
+                    <td class="machine">65</td>
+                    <td class="machine" id="lbm">8</td>
                 </tr>
             </tbody>
 
