--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1219,11 +1219,11 @@
                     <td class="winning" id="lbw">67</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">78</td>
+                    <td class="machine">25</td>
+                    <td class="machine">59</td>
+                    <td class="machine">21</td>
+                    <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody>
 
