--- a/classification.html
+++ b/classification.html
@@ -94,8 +94,9 @@
             background-color: #ff0000;
         }
         .className {
-            writing-mode: vertical-lr;
+            writing-mode: tb;
             padding: 5px;
+            transform: rotate(-180deg);
         }
         .no {
             color: white;
