--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -259,19 +259,19 @@
                 <p class="machine">28 - 6 - 71 - 68 - 65</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
+                <h3 class="game">06</h3>
+                <p class="winning">84 - 23 - 34 - 17 - 68</p>
+                <p class="machine">5 - 27 - 7 - 70 - 16</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">77 - 46 - 68 - 32 - 7</p>
                 <p class="machine"></p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
-            </article>
-            <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Fairchance</h3>
+                <p class="winning">54 - 30 - 23 - 70 - 9</p>
+                <p class="machine">14 - 39 - 88 - 34 - 44</p>        
             </article>
         </section>
     
