--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1241,11 +1241,11 @@
                     <td class="winning" id="lbw">7</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">5</td>
+                    <td class="machine">37</td>
+                    <td class="machine">89</td>
+                    <td class="machine">10</td>
+                    <td class="machine" id="lbm">36</td>
                 </tr>
             </tbody>
 
