result OCT 23rd Wed 2024

--- a/GAMES/19LUCKY-G.html
+++ b/GAMES/19LUCKY-G.html
@@ -1293,11 +1293,11 @@
                     <td class="winning" id="lbw">16</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">9</td>
+                    <td class="machine">58</td>
+                    <td class="machine">53</td>
+                    <td class="machine">3</td>
+                    <td class="machine" id="lbm">41</td>
                 </tr>
             </tbody>
 
