--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -259,19 +259,19 @@
                 <p class="machine">89 - 60 - 36 - 81 - 5</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">28 - 16 - 67 - 1 - 23</p>
+                <p class="machine">58 - 54 - 39 - 11 - 50</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Midweek</h3>
+                <p class="winning">88 - 17 - 55 - 68 - 50</p>
+                <p class="machine">48 - 74 - 53 - 47 - 37</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">85 - 34 - 6 - 63 - 67</p>
+                <p class="machine">21 - 84 - 80 - 22 - 30</p>        
             </article>
         </section>
     </div>
