result OCT 24th Sat, 2024

--- a/GAMES/25Aseda.html
+++ b/GAMES/25Aseda.html
@@ -1282,11 +1282,11 @@
                     <td class="winning" id="lbw">46</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">20</td>
+                    <td class="machine">82</td>
+                    <td class="machine">28</td>
+                    <td class="machine">36</td>
+                    <td class="machine" id="lbm">66</td>
                 </tr>
             </tbody>
 
