--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1286,11 +1286,11 @@
                     <td class="winning" id="lbw">64</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">65</td>
+                    <td class="machine">63</td>
+                    <td class="machine">78</td>
+                    <td class="machine">45</td>
+                    <td class="machine" id="lbm">83</td>
                 </tr>
             </tbody>
 
