--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1314,11 +1314,11 @@
                     <td class="winning" id="lbw">29</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">84</td>
+                    <td class="machine">34</td>
+                    <td class="machine">74</td>
+                    <td class="machine">28</td>
+                    <td class="machine" id="lbm">39</td>
                 </tr>
             </tbody>
 
