--- a/GAMES/21Fortune.html
+++ b/GAMES/21Fortune.html
@@ -1314,11 +1314,11 @@
                     <td class="winning" id="lbw">12</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">30</td>
+                    <td class="machine">56</td>
+                    <td class="machine">70</td>
+                    <td class="machine">11</td>
+                    <td class="machine" id="lbm">36</td>
                 </tr>
             </tbody>
 
