--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1307,11 +1307,11 @@
                     <td class="winning" id="lbw">55</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">84</td>
+                    <td class="machine">12</td>
+                    <td class="machine">40</td>
+                    <td class="machine">27</td>
+                    <td class="machine" id="lbm">10</td>
                 </tr>
             </tbody>
 
