result NOV 7th Thursday, 2024

--- a/GAMES/20Midweek.html
+++ b/GAMES/20Midweek.html
@@ -1336,11 +1336,11 @@
                     <td class="winning" id="lbw">23</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">68</td>
+                    <td class="machine">78</td>
+                    <td class="machine">70</td>
+                    <td class="machine">59</td>
+                    <td class="machine" id="lbm">80</td>
                 </tr>
             </tbody>
 
