result Nov 10th Sun

--- a/GAMES/24National.html
+++ b/GAMES/24National.html
@@ -1329,11 +1329,11 @@
                     <td class="winning" id="lbw">66</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">2</td>
+                    <td class="machine">28</td>
+                    <td class="machine">47</td>
+                    <td class="machine">70</td>
+                    <td class="machine" id="lbm">1</td>
                 </tr>
             </tbody>
 
