--- a/GAMES/22Bonanza.html
+++ b/GAMES/22Bonanza.html
@@ -1352,11 +1352,11 @@
                     <td class="winning" id="lbw">71</td>
     
                     <!-- machine-->
-                    <td class="machine" id="fbm"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine"></td>
-                    <td class="machine" id="lbm"></td>
+                    <td class="machine" id="fbm">52</td>
+                    <td class="machine">69</td>
+                    <td class="machine">4</td>
+                    <td class="machine">42</td>
+                    <td class="machine" id="lbm">15</td>
                 </tr>
             </tbody>
 
